--- a/nba2.html
+++ b/nba2.html
@@ -582,6 +582,12 @@
             margin-top: 2px;
         }
 
+        .analysis-section {
+            margin-top: 16px;
+            padding-top: 16px;
+            border-top: 1px solid var(--color-border);
+        }
+
         .modal {
             display: none;
             position: fixed;
@@ -1751,6 +1757,13 @@
                                 </div>
                             </div>
                             ${quickAnalysis}
+                            ${!isUpcoming ? `
+                                <div class="analysis-section">
+                                    <button class="analyze-btn" onclick="openDetailedAnalysis('${eventId}', '${home.name}', '${away.name}')">
+                                        <i class="fas fa-chart-line"></i> Análise Detalhada
+                                    </button>
+                                </div>
+                            ` : ''}
                         </div>
                     `;
                 }
