--- a/nba2.html
+++ b/nba2.html
@@ -1757,7 +1757,7 @@
                                 </div>
                             </div>
                             ${quickAnalysis}
-                            ${!isUpcoming ? `
+                            ${!quickAnalysis ? `
                                 <div class="analysis-section">
                                     <button class="analyze-btn" onclick="openDetailedAnalysis('${eventId}', '${home.name}', '${away.name}')">
                                         <i class="fas fa-chart-line"></i> Análise Detalhada
