--- a/NBA.html
+++ b/NBA.html
@@ -194,29 +194,31 @@
             border-bottom: 1px solid rgba(255, 255, 255, 0.1);
         }
         .tab {
-            background: #1F1F1F;
+            background: rgba(31, 31, 31, 0.6);
             padding: 10px 24px;
-            border-radius: 8px;
+            border-radius: 12px;
             cursor: pointer;
             font-family: 'Oxanium', sans-serif;
             font-size: 14px;
-            font-weight: 600;
+            font-weight: 700;
             color: var(--color-text-secondary);
             text-transform: uppercase;
-            transition: all 0.3s ease;
-            border: 1px solid transparent;
+            transition: transform 0.2s ease, box-shadow 0.3s ease, background 0.3s ease, color 0.3s ease;
+            border: 1px solid rgba(255,255,255,0.06);
+            backdrop-filter: blur(8px);
         }
         .tab:hover {
-            background: linear-gradient(45deg, #2A2A2A, #3A3A3A);
+            background: linear-gradient(135deg, #232323, #333333);
             color: #FFFFFF;
-            border-color: var(--color-primary);
-            box-shadow: 0 0 8px rgba(107, 33, 168, 0.3);
+            border-color: rgba(147, 51, 234, 0.6);
+            box-shadow: 0 6px 16px rgba(147, 51, 234, 0.35);
+            transform: translateY(-2px);
         }
         .tab.active {
-            background: linear-gradient(45deg, var(--color-primary), var(--color-accent));
+            background: linear-gradient(135deg, var(--color-primary), var(--color-accent));
             color: #FFFFFF;
-            border-color: var(--color-primary);
-            box-shadow: 0 0 12px rgba(107, 33, 168, 0.5);
+            border-color: rgba(147, 51, 234, 0.8);
+            box-shadow: 0 10px 24px rgba(147, 51, 234, 0.45);
         }
         .schedule {
             background: #1A1A1A;
@@ -235,29 +237,32 @@
             letter-spacing: 1px;
         }
         .match {
-            display: flex;
-            flex-direction: column;
+            display: grid;
+            grid-template-columns: 1fr auto 1fr;
             align-items: center;
+            gap: 18px;
             padding: 20px;
-            border-bottom: 1px solid rgba(255, 255, 255, 0.05);
-            transition: all 0.3s ease;
-            background: #1F1F1F;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.06);
+            transition: transform 0.2s ease, box-shadow 0.3s ease, background 0.3s ease;
+            background: radial-gradient(1200px 600px at 10% -10%, rgba(147, 51, 234, 0.08), transparent), #1F1F1F;
+            border-radius: 14px;
         }
         .match:hover {
-            background: linear-gradient(45deg, #2A2A2A, #333333);
-            box-shadow: inset 0 0 5px rgba(107, 33, 168, 0.2);
+            background: radial-gradient(1000px 500px at 15% -20%, rgba(147, 51, 234, 0.12), transparent), linear-gradient(45deg, #242424, #2E2E2E);
+            box-shadow: 0 10px 28px rgba(0, 0, 0, 0.35), inset 0 0 8px rgba(147, 51, 234, 0.25);
+            transform: translateY(-2px);
         }
         .match:last-child {
             border-bottom: none;
         }
         .match.live-game {
             border-left: 4px solid #EF4444;
-            background: rgba(239, 68, 68, 0.05);
+            background: linear-gradient(90deg, rgba(239, 68, 68, 0.08), transparent), #1F1F1F;
             animation: livePulse 2s infinite;
         }
         .match.final-game {
-            opacity: 0.85;
-            background: rgba(30, 30, 30, 0.7);
+            opacity: 0.95;
+            background: linear-gradient(90deg, rgba(82,82,82,0.15), transparent), rgba(30, 30, 30, 0.9);
         }
         @keyframes livePulse {
             0% { box-shadow: 0 0 4px rgba(239, 68, 68, 0.3); }
@@ -325,15 +330,17 @@
             text-align: center;
         }
         .team img {
-            width: 48px;
-            height: 48px;
+            width: 54px;
+            height: 54px;
             border-radius: 50%;
-            border: 2px solid #06B6D4;
-            box-shadow: 0 0 6px rgba(6, 182, 212, 0.3);
-            transition: transform 0.3s ease;
+            border: 2px solid rgba(6, 182, 212, 0.6);
+            box-shadow: 0 6px 16px rgba(6, 182, 212, 0.25);
+            transition: transform 0.25s ease, box-shadow 0.3s ease;
+            background: radial-gradient(30px 30px at 50% 50%, rgba(255,255,255,0.04), transparent);
         }
         .team img:hover {
-            transform: scale(1.1);
+            transform: scale(1.06) translateY(-1px);
+            box-shadow: 0 10px 24px rgba(6, 182, 212, 0.35);
         }
         .team-name {
             display: flex;
@@ -343,8 +350,9 @@
         }
         .team-city {
             font-size: 16px;
-            font-weight: 600;
+            font-weight: 700;
             color: #FFFFFF;
+            letter-spacing: 0.3px;
         }
         .team-nickname {
             font-size: 12px;
@@ -404,23 +412,28 @@
             margin-top: 12px;
         }
         .details button {
-            background: linear-gradient(45deg, var(--color-primary), var(--color-accent));
+            background: linear-gradient(135deg, var(--color-primary), var(--color-accent));
             border: none;
-            padding: 10px 20px;
-            border-radius: 8px;
+            padding: 12px 22px;
+            border-radius: 12px;
             color: #FFFFFF;
             font-family: 'Oxanium', sans-serif;
             font-size: 14px;
-            font-weight: 600;
+            font-weight: 700;
             text-transform: uppercase;
             cursor: pointer;
-            transition: all 0.3s ease;
-            box-shadow: 0 2px 8px rgba(107, 33, 168, 0.3);
+            transition: transform 0.2s ease, box-shadow 0.3s ease, background 0.3s ease;
+            box-shadow: 0 10px 24px rgba(147, 51, 234, 0.35);
+            letter-spacing: 0.8px;
         }
         .details button:hover {
-            background: linear-gradient(45deg, var(--color-accent), var(--color-primary));
-            box-shadow: 0 4px 12px rgba(107, 33, 168, 0.5);
-            transform: translateY(-2px);
+            background: linear-gradient(135deg, var(--color-accent), var(--color-primary));
+            box-shadow: 0 16px 32px rgba(147, 51, 234, 0.5);
+            transform: translateY(-2px) scale(1.01);
+        }
+        .details button:active {
+            transform: translateY(0px) scale(0.99);
+            box-shadow: 0 6px 18px rgba(147, 51, 234, 0.35);
         }
         .error {
             color: #EF4444;
