--- a/NBA.html
+++ b/NBA.html
@@ -682,10 +682,14 @@
 
     <!-- Modal Reestruturado -->
     <div class="modal" id="gameStatsModal">
-        <div class="modal-content">
+        <div class="modal-content" style="position:relative;">
             <div class="modal-header">
                 <h2 id="modalTitle"></h2>
                 <button class="close-btn" id="closeModal">×</button>
+            </div>
+
+            <div id="modalLoading" style="position:absolute; inset:0; display:none; align-items:center; justify-content:center; background:rgba(0,0,0,0.35); z-index:5;">
+                <span style="font-family: 'Oxanium', sans-serif; font-weight:600; color:#fff; background:rgba(107,33,168,0.2); padding:8px 12px; border-radius:8px;">Carregando estatísticas…</span>
             </div>
 
             <div class="modal-tabs">
@@ -923,14 +927,17 @@
             }
         }
 
+        const scheduleCache = {};
         async function fetchSchedule(date) {
+            if (scheduleCache[date]) return scheduleCache[date];
             const apiUrl = `https://stats.sports.bellmedia.ca/sports/basketball/leagues/nba/scheduleV2/subset/dates?brand=tsn&type=json&dateOrId=${date}`;
             const proxyUrl = `https://api.allorigins.win/raw?url=${encodeURIComponent(apiUrl)}`;
             try {
                 const response = await fetch(proxyUrl);
                 if (!response.ok) throw new Error(`HTTP error! Status: ${response.status}`);
                 const data = await response.json();
-                return data[date];
+                scheduleCache[date] = data[date];
+                return scheduleCache[date];
             } catch (error) {
                 console.error('Error fetching schedule:', error);
                 throw error;
@@ -1082,13 +1089,21 @@
 
                 // Adicionar event listeners aos botões
                 scheduleDiv.querySelectorAll('.stats-btn').forEach(btn => {
-                    btn.addEventListener('click', () => {
+                    btn.addEventListener('click', async () => {
                         const eventId = btn.dataset.eventId;
                         const homeName = btn.dataset.homeName;
                         const awayName = btn.dataset.awayName;
                         const homeSeo = btn.dataset.homeSeo;
                         const awaySeo = btn.dataset.awaySeo;
-                        showGameStats(eventId, homeName, awayName, homeSeo, awaySeo);
+                        const originalText = btn.textContent;
+                        btn.disabled = true;
+                        btn.textContent = 'Abrindo…';
+                        try {
+                            await showGameStats(eventId, homeName, awayName, homeSeo, awaySeo);
+                        } finally {
+                            btn.disabled = false;
+                            btn.textContent = originalText;
+                        }
                     });
                 });
             } catch (error) {
@@ -1106,6 +1121,13 @@
 
         async function showGameStats(eventId, homeName, awayName, homeSeoIdentifier, awaySeoIdentifier) {
             try {
+                // Abrir modal imediatamente com overlay de carregamento
+                modalTitle.textContent = `${homeName} vs ${awayName}`;
+                modal.style.display = 'flex';
+                setTimeout(() => modal.classList.add('show'), 10);
+                const loadingOverlay = document.getElementById('modalLoading');
+                if (loadingOverlay) loadingOverlay.style.display = 'flex';
+
                 const scheduleData = await fetchSchedule(currentDate);
                 const game = scheduleData?.events.find(e => e.eventId === eventId)?.event;
                 const gameStatus = game?.status || 'Pre-Game';
@@ -1123,8 +1145,13 @@
                     statsData = await response.json();
                 }
 
-                playerData = await fetchPlayerSeasonStats(eventId);
-                injuriesData = await fetchInjuries();
+                // Buscar dados em paralelo para reduzir a espera
+                const [playerRes, injuriesRes] = await Promise.all([
+                    fetchPlayerSeasonStats(eventId),
+                    fetchInjuries()
+                ]);
+                playerData = playerRes;
+                injuriesData = injuriesRes;
 
                 modalTitle.textContent = `${homeName} vs ${awayName}`;
 
@@ -1284,9 +1311,9 @@
                 renderPlayerList(playerData?.away, 'awayPlayersList', 'awayPlayersTitle', awayName);
                 renderPlayerList(playerData?.home, 'homePlayersList', 'homePlayersTitle', homeName);
 
-                // Mostrar modal
-                modal.style.display = 'flex';
-                setTimeout(() => modal.classList.add('show'), 10);
+                // Dados carregados; ocultar overlay de carregamento
+                const loadingOverlay2 = document.getElementById('modalLoading');
+                if (loadingOverlay2) loadingOverlay2.style.display = 'none';
 
                 // Troca de abas
                 document.querySelectorAll('.modal-tab').forEach(tab => {
