--- a/NBA.html
+++ b/NBA.html
@@ -225,6 +225,7 @@
             border-radius: 12px;
             overflow: hidden;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.4);
+            padding: 12px;
         }
         .day-header {
             background: #222222;
@@ -237,12 +238,12 @@
             letter-spacing: 1px;
         }
         .match {
-            display: grid;
-            grid-template-columns: 1fr auto 1fr;
-            align-items: center;
-            gap: 18px;
+            display: block;
+            position: relative;
+            min-height: 160px;
+            margin: 12px;
             padding: 20px;
-            border-bottom: 1px solid rgba(255, 255, 255, 0.06);
+            border-bottom: none;
             transition: transform 0.2s ease, box-shadow 0.3s ease, background 0.3s ease;
             background: radial-gradient(1200px 600px at 10% -10%, rgba(147, 51, 234, 0.08), transparent), #1F1F1F;
             border-radius: 14px;
@@ -313,12 +314,13 @@
             font-weight: 600;
         }
         .teams {
-            display: flex;
-            justify-content: center;
+            display: grid;
+            grid-template-columns: 1fr 140px 1fr;
             align-items: center;
-            gap: 20px;
+            justify-items: center;
+            gap: 24px;
             width: 100%;
-            margin-bottom: 12px;
+            margin-bottom: 20px;
         }
         .team {
             display: flex;
@@ -330,8 +332,8 @@
             text-align: center;
         }
         .team img {
-            width: 54px;
-            height: 54px;
+            width: 56px;
+            height: 56px;
             border-radius: 50%;
             border: 2px solid rgba(6, 182, 212, 0.6);
             box-shadow: 0 6px 16px rgba(6, 182, 212, 0.25);
@@ -378,6 +380,7 @@
             flex-direction: column;
             align-items: center;
             gap: 6px;
+            width: 140px;
         }
         .score {
             font-family: 'Oxanium', sans-serif;
@@ -405,17 +408,20 @@
         }
         .time {
             font-family: 'Oxanium', sans-serif;
-            font-size: 24px;
+            font-size: 18px;
             color: #06B6D4;
         }
         .details {
-            margin-top: 12px;
+            position: absolute;
+            right: 20px;
+            bottom: 20px;
+            margin-top: 0;
         }
         .details button {
             background: linear-gradient(135deg, var(--color-primary), var(--color-accent));
             border: none;
-            padding: 12px 22px;
-            border-radius: 12px;
+            padding: 10px 18px;
+            border-radius: 10px;
             color: #FFFFFF;
             font-family: 'Oxanium', sans-serif;
             font-size: 14px;
@@ -541,6 +547,30 @@
         }
         .tab-content.active {
             display: block;
+        }
+
+        /* Layout refinado para métricas do modal */
+        .prob-container {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 12px;
+        }
+        .prob-item {
+            background: #1E1E1E;
+            border-radius: 8px;
+            padding: 12px;
+            text-align: center;
+        }
+        .team-compare {
+            display: flex;
+            align-items: center;
+            gap: 12px;
+        }
+        .key-matchup {
+            background: #222222;
+            border-radius: 8px;
+            padding: 16px;
+            margin-top: 8px;
         }
 
         .overview-card, .comparison-teams, .stat-comparison, .campaign-box,
