--- a/NBA.html
+++ b/NBA.html
@@ -27,8 +27,8 @@
             --transition: all 0.3s ease;
         }
         body {
-            font-family: 'Oxanium', sans-serif;
-            background: var(--color-bg-dark);
+            font-family: 'Space Grotesk', 'Poppins', sans-serif;
+            background: #0C0C0C;
             color: var(--color-text-primary);
             margin: 0;
             padding: 24px 24px 24px 70px;
@@ -38,24 +38,9 @@
             transition: padding-left 0.3s ease;
         }
         .particles {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            z-index: -1;
-            overflow: hidden;
-            top: 0;
-            left: 0;
-            opacity: 0.15;
+            display: none;
         }
-        .particle {
-            position: absolute;
-            width: 2px;
-            height: 2px;
-            background-color: rgba(107, 33, 168, 0.5);
-            box-shadow: 0 0 4px rgba(6, 182, 212, 0.2);
-            border-radius: 50%;
-            animation: particleFloat 40s infinite linear;
-        }
+        .particle { display: none; }
         @keyframes particleFloat {
             0% { transform: translateY(0) translateX(0); opacity: 0; }
             10% { opacity: 0.8; }
@@ -244,13 +229,15 @@
             margin: 12px;
             padding: 20px;
             border-bottom: none;
-            transition: transform 0.2s ease, box-shadow 0.3s ease, background 0.3s ease;
-            background: radial-gradient(1200px 600px at 10% -10%, rgba(147, 51, 234, 0.08), transparent), #1F1F1F;
-            border-radius: 14px;
+            transition: transform 0.2s ease, box-shadow 0.2s ease, background 0.2s ease;
+            background: #161616;
+            border: 1px solid rgba(255,255,255,0.06);
+            border-radius: 12px;
+            box-shadow: none;
         }
         .match:hover {
-            background: radial-gradient(1000px 500px at 15% -20%, rgba(147, 51, 234, 0.12), transparent), linear-gradient(45deg, #242424, #2E2E2E);
-            box-shadow: 0 10px 28px rgba(0, 0, 0, 0.35), inset 0 0 8px rgba(147, 51, 234, 0.25);
+            background: #1D1D1D;
+            border-color: rgba(255,255,255,0.12);
             transform: translateY(-2px);
         }
         .match:last-child {
@@ -335,14 +322,14 @@
             width: 56px;
             height: 56px;
             border-radius: 50%;
-            border: 2px solid rgba(6, 182, 212, 0.6);
-            box-shadow: 0 6px 16px rgba(6, 182, 212, 0.25);
-            transition: transform 0.25s ease, box-shadow 0.3s ease;
-            background: radial-gradient(30px 30px at 50% 50%, rgba(255,255,255,0.04), transparent);
+            border: 1px solid rgba(255,255,255,0.12);
+            box-shadow: none;
+            transition: transform 0.2s ease, border-color 0.2s ease;
+            background: #1A1A1A;
         }
         .team img:hover {
-            transform: scale(1.06) translateY(-1px);
-            box-shadow: 0 10px 24px rgba(6, 182, 212, 0.35);
+            transform: scale(1.03);
+            border-color: rgba(255,255,255,0.18);
         }
         .team-name {
             display: flex;
@@ -351,10 +338,10 @@
             gap: 2px;
         }
         .team-city {
-            font-size: 16px;
-            font-weight: 700;
+            font-size: 15px;
+            font-weight: 600;
             color: #FFFFFF;
-            letter-spacing: 0.3px;
+            letter-spacing: 0.2px;
         }
         .team-nickname {
             font-size: 12px;
@@ -363,6 +350,10 @@
         .team-record {
             font-size: 12px;
             color: var(--color-text-secondary);
+            background: #1E1E1E;
+            border: 1px solid rgba(255,255,255,0.08);
+            padding: 4px 8px;
+            border-radius: 12px;
         }
         .wins {
             color: #22C55E;
@@ -383,28 +374,34 @@
             width: 140px;
         }
         .score {
-            font-family: 'Oxanium', sans-serif;
-            font-size: 32px;
+            font-family: 'Space Grotesk', 'Poppins', sans-serif;
+            font-size: 30px;
+            font-weight: 600;
+            letter-spacing: 0.5px;
             color: #FFFFFF;
         }
         .score-updated {
             animation: pulse 1s ease-in-out;
         }
         .status {
-            font-family: 'Oxanium', sans-serif;
+            font-family: 'Space Grotesk', 'Poppins', sans-serif;
             font-size: 12px;
             padding: 4px 10px;
             border-radius: 12px;
             text-transform: uppercase;
+            background: #2A2A2A;
+            border: 1px solid rgba(255,255,255,0.08);
+            color: #FFFFFF;
         }
         .status.in-progress {
             background: #EF4444;
             color: #FFFFFF;
-            animation: pulse 1.5s infinite;
+            border-color: rgba(255,255,255,0.18);
         }
         .status.final {
-            background: #525252;
+            background: #3A3A3A;
             color: var(--color-text-secondary);
+            border-color: rgba(255,255,255,0.12);
         }
         .time {
             font-family: 'Oxanium', sans-serif;
@@ -418,24 +415,24 @@
             margin-top: 0;
         }
         .details button {
-            background: linear-gradient(135deg, var(--color-primary), var(--color-accent));
-            border: none;
+            background: #2A2A2A;
+            border: 1px solid rgba(255,255,255,0.08);
             padding: 10px 18px;
             border-radius: 10px;
             color: #FFFFFF;
-            font-family: 'Oxanium', sans-serif;
-            font-size: 14px;
-            font-weight: 700;
+            font-family: 'Space Grotesk', 'Poppins', sans-serif;
+            font-size: 13px;
+            font-weight: 600;
             text-transform: uppercase;
             cursor: pointer;
-            transition: transform 0.2s ease, box-shadow 0.3s ease, background 0.3s ease;
-            box-shadow: 0 10px 24px rgba(147, 51, 234, 0.35);
-            letter-spacing: 0.8px;
+            transition: transform 0.2s ease, background 0.2s ease, border-color 0.2s ease;
+            box-shadow: none;
+            letter-spacing: 0.6px;
         }
         .details button:hover {
-            background: linear-gradient(135deg, var(--color-accent), var(--color-primary));
-            box-shadow: 0 16px 32px rgba(147, 51, 234, 0.5);
-            transform: translateY(-2px) scale(1.01);
+            background: #333333;
+            border-color: rgba(255,255,255,0.14);
+            transform: translateY(-2px);
         }
         .details button:active {
             transform: translateY(0px) scale(0.99);
@@ -468,17 +465,18 @@
             opacity: 1;
         }
         .modal-content {
-            background: var(--color-bg-medium);
-            border-radius: 16px;
+            background: #161616;
+            border: 1px solid rgba(255,255,255,0.08);
+            border-radius: 14px;
             padding: 24px;
-            max-width: 900px;
-            width: 90%;
+            max-width: 960px;
+            width: 92%;
             position: relative;
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.6);
+            box-shadow: none;
             max-height: 90vh;
             overflow-y: auto;
-            transform: scale(0.95);
-            transition: transform 0.3s ease;
+            transform: scale(0.96);
+            transition: transform 0.25s ease;
         }
         .modal.show .modal-content {
             transform: scale(1);
@@ -512,34 +510,33 @@
         /* Novos estilos para abas e análise */
         .modal-tabs {
             display: flex;
-            gap: 8px;
-            margin-bottom: 20px;
-            background: #1F1F1F;
-            border-radius: 8px;
-            padding: 4px;
+            gap: 6px;
+            margin-bottom: 16px;
+            background: transparent;
+            border-radius: 0;
+            padding: 0;
             overflow-x: auto;
+            border-bottom: 1px solid rgba(255,255,255,0.08);
         }
         .modal-tab {
             background: transparent;
             border: none;
-            padding: 8px 16px;
-            border-radius: 6px;
+            padding: 10px 12px;
+            border-radius: 0;
             cursor: pointer;
-            font-family: 'Oxanium', sans-serif;
-            font-size: 14px;
+            font-family: 'Space Grotesk', 'Poppins', sans-serif;
+            font-size: 13px;
             font-weight: 600;
             color: var(--color-text-secondary);
-            transition: all 0.3s ease;
+            transition: color 0.2s ease;
             white-space: nowrap;
         }
         .modal-tab:hover {
-            background: rgba(107, 33, 168, 0.1);
-            color: var(--color-accent);
+            color: #FFFFFF;
         }
         .modal-tab.active {
-            background: linear-gradient(45deg, var(--color-primary), var(--color-accent));
             color: #FFFFFF;
-            box-shadow: 0 0 8px rgba(107, 33, 168, 0.5);
+            border-bottom: 2px solid #9333EA;
         }
         .tab-content {
             display: none;
