--- a/NBA.html
+++ b/NBA.html
@@ -672,6 +672,64 @@
                 width: 100%;
             }
         }
+
+        /* Lesões - seção no modal */
+        .injury-section {
+            margin-top: 16px;
+            padding-top: 8px;
+            border-top: 1px solid rgba(255,255,255,0.08);
+        }
+        .injury-section h4 {
+            margin: 8px 0 6px;
+            font-size: 14px;
+            font-weight: 600;
+            letter-spacing: 0.2px;
+            color: #e5e7eb;
+        }
+        .injury-list {
+            display: grid;
+            grid-template-columns: 1fr;
+            gap: 8px;
+        }
+        .injury-item {
+            display: flex;
+            align-items: flex-start;
+            justify-content: space-between;
+            background: #1A1A1A;
+            border: 1px solid rgba(255,255,255,0.08);
+            border-radius: 10px;
+            padding: 10px 12px;
+        }
+        .injury-name {
+            color: #ffffff;
+            font-size: 13px;
+            font-weight: 600;
+            letter-spacing: 0.2px;
+        }
+        .injury-desc {
+            color: #9ca3af;
+            font-size: 12px;
+            margin-top: 2px;
+        }
+        .injury-meta {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+        }
+        .injury-status {
+            font-size: 12px;
+            font-weight: 600;
+            padding: 4px 8px;
+            border-radius: 999px;
+            border: 1px solid rgba(255,255,255,0.10);
+            background: #2A2A2A;
+            color: #FFFFFF;
+        }
+        .injury-status.out { background: #1f2937; border-color: #ef4444; color: #ef4444; }
+        .injury-status.questionable { background:#1f2937; border-color:#f59e0b; color:#f59e0b; }
+        .injury-status.probable { background:#1f2937; border-color:#10b981; color:#10b981; }
+        .injury-status.day-to-day { background:#1f2937; border-color:#9ca3af; color:#9ca3af; }
+        .injury-date { color: #9ca3af; font-size: 12px; }
     </style>
 </head>
 <body>
@@ -838,10 +896,18 @@
                     <div class="player-column">
                         <h4 id="awayPlayersTitle">Visitante - Top Jogadores</h4>
                         <div id="awayPlayersList"></div>
+                        <div class="injury-section">
+                            <h4 id="awayInjuriesTitle">Visitante - Lesões e Status</h4>
+                            <div id="awayInjuriesList" class="injury-list"></div>
+                        </div>
                     </div>
                     <div class="player-column">
                         <h4 id="homePlayersTitle">Mandante - Top Jogadores</h4>
                         <div id="homePlayersList"></div>
+                        <div class="injury-section">
+                            <h4 id="homeInjuriesTitle">Mandante - Lesões e Status</h4>
+                            <div id="homeInjuriesList" class="injury-list"></div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -926,6 +992,69 @@
         function getPlayerPhotoUrl(playerName) {
             const seoId = playerName.toLowerCase().replace(/\s+/g, '-') + '-358183';
             return `https://tsnimages.tsn.ca/ImageProvider/PlayerHeadshot?seoId=${seoId}&width=128&height=128`;
+        }
+
+        // Utilitários para normalizar e filtrar lesões
+        function normalizeInjuryItem(item) {
+            const playerName = item?.player?.displayName || item?.playerName || item?.name || 'Jogador';
+            const statusRaw = item?.injuryStatus || item?.status || item?.availability || '';
+            const description = item?.injuryDescription || item?.description || item?.notes || '';
+            const dateStr = item?.date || item?.reportDate || item?.updated || '';
+            const teamSeo = item?.team?.seoIdentifier || item?.seoIdentifier || item?.teamSeo || null;
+            const teamName = item?.team?.name || item?.teamName || null;
+
+            const status = (statusRaw || '').toLowerCase();
+            let statusClass = 'day-to-day';
+            if (status.includes('out')) statusClass = 'out';
+            else if (status.includes('questionable')) statusClass = 'questionable';
+            else if (status.includes('probable')) statusClass = 'probable';
+
+            return { playerName, statusRaw: statusRaw || 'N/D', statusClass, description, dateStr, teamSeo, teamName };
+        }
+
+        function filterInjuriesForTeam(injuriesData, teamName, teamSeo) {
+            if (!injuriesData) return [];
+            let items = [];
+            if (Array.isArray(injuriesData)) {
+                items = injuriesData;
+            } else if (injuriesData?.players) {
+                items = injuriesData.players;
+            } else if (injuriesData?.injuries) {
+                items = injuriesData.injuries;
+            } else if (injuriesData?.teams) {
+                items = injuriesData.teams.flatMap(t => (t.reports || []).map(r => ({ ...r, team: t })));
+            }
+
+            return items
+                .map(normalizeInjuryItem)
+                .filter(it => {
+                    const bySeo = teamSeo && it.teamSeo && it.teamSeo === teamSeo;
+                    const byName = teamName && it.teamName && (it.teamName === teamName || it.teamName?.includes(teamName));
+                    return bySeo || byName;
+                });
+        }
+
+        function renderInjuryList(injuries, containerId, titleId, teamLabel) {
+            const container = document.getElementById(containerId);
+            const title = document.getElementById(titleId);
+            if (title) title.textContent = `${teamLabel} - Lesões e Status`;
+            if (!container) return;
+            if (!injuries || injuries.length === 0) {
+                container.innerHTML = '<div class="injury-item"><span class="injury-name">Sem lesões reportadas</span></div>';
+                return;
+            }
+            container.innerHTML = injuries.map(it => `
+                <div class="injury-item">
+                    <div>
+                        <div class="injury-name">${it.playerName}</div>
+                        ${it.description ? `<div class="injury-desc">${it.description}</div>` : ''}
+                    </div>
+                    <div class="injury-meta">
+                        <span class="injury-status ${it.statusClass}">${it.statusRaw}</span>
+                        ${it.dateStr ? `<span class="injury-date">${it.dateStr}</span>` : ''}
+                    </div>
+                </div>
+            `).join('');
         }
 
         function formatarDataBrasil(dataStr) {
@@ -1340,6 +1469,12 @@
 
                 renderPlayerList(playerData?.away, 'awayPlayersList', 'awayPlayersTitle', awayName);
                 renderPlayerList(playerData?.home, 'homePlayersList', 'homePlayersTitle', homeName);
+
+                // Lesões
+                const awayInjuries = filterInjuriesForTeam(injuriesData, awayName, awaySeoIdentifier);
+                const homeInjuries = filterInjuriesForTeam(injuriesData, homeName, homeSeoIdentifier);
+                renderInjuryList(awayInjuries, 'awayInjuriesList', 'awayInjuriesTitle', awayName);
+                renderInjuryList(homeInjuries, 'homeInjuriesList', 'homeInjuriesTitle', homeName);
 
                 // Dados carregados; ocultar overlay de carregamento
                 const loadingOverlay2 = document.getElementById('modalLoading');
