--- a/NBA.html
+++ b/NBA.html
@@ -1205,10 +1205,44 @@
                 transform: scaleX(1);
             }
         }
-    </style>
+    /* Sidebar Navigation */
+body { padding: 20px 20px 20px 90px; transition: padding-left 0.3s ease; }
+.sidebar { position: fixed; left: 0; top: 0; height: 100vh; width: 70px; background: rgba(26, 26, 35, 0.95); backdrop-filter: blur(10px); border-right: 1px solid var(--color-border); transition: width 0.3s ease; z-index: 1000; overflow: hidden; }
+.sidebar:hover { width: 260px; }
+.sidebar-header { display: flex; align-items: center; padding: 20px 15px; gap: 15px; border-bottom: 1px solid var(--color-border); white-space: nowrap; }
+.sidebar-logo { width: 40px; height: 40px; border-radius: 50%; flex-shrink: 0; }
+.sidebar-title { font-size: 1.2rem; font-weight: 700; background: linear-gradient(45deg, var(--color-primary), var(--color-accent)); -webkit-background-clip: text; background-clip: text; color: transparent; opacity: 0; transition: opacity 0.3s ease; }
+.sidebar:hover .sidebar-title { opacity: 1; }
+.sidebar-menu { list-style: none; padding: 20px 0; }
+.sidebar-menu li { margin: 5px 0; }
+.sidebar-menu a { display: flex; align-items: center; padding: 15px 20px; color: var(--color-text-secondary); text-decoration: none; transition: all 0.3s ease; gap: 15px; white-space: nowrap; }
+.sidebar-menu a:hover { background: rgba(147, 51, 234, 0.1); color: var(--color-primary); transform: translateX(5px); }
+.sidebar-menu li.active a { background: linear-gradient(90deg, rgba(147, 51, 234, 0.2), transparent); color: var(--color-primary); border-left: 3px solid var(--color-primary); }
+.sidebar-menu .icon { font-size: 1.3rem; width: 30px; text-align: center; flex-shrink: 0; }
+.sidebar-menu .label { opacity: 0; transition: opacity 0.3s ease; font-weight: 500; }
+.sidebar:hover .sidebar-menu .label { opacity: 1; }
+</style>
 </head>
 
 <body>
+    <nav class="sidebar">
+        <div class="sidebar-header">
+            <img src="https://i.ibb.co/G4Y8sHMk/Chat-GPT-Image-21-de-abr-de-2025-16-14-34-1.png" alt="RW Tips" class="sidebar-logo">
+            <span class="sidebar-title">RW TIPS</span>
+        </div>
+        <ul class="sidebar-menu">
+            <li><a href="visualization.html"><span class="icon">⚽</span><span class="label">Próximos Jogos</span></a></li>
+            <li><a href="results.html"><span class="icon">📊</span><span class="label">Últimos Resultados</span></a></li>
+            <li><a href="live_v2.html"><span class="icon">🔴</span><span class="label">AO VIVO</span></a></li>
+            <li><a href="statistics.html"><span class="icon">📈</span><span class="label">Estatísticas das Ligas</span></a></li>
+            <li><a href="formularioApostas.html"><span class="icon">💰</span><span class="label">Registrar Apostas</span></a></li>
+            <li><a href="players.html"><span class="icon">🎮</span><span class="label">Análise de Jogadores</span></a></li>
+            <li><a href="dashboard.html"><span class="icon">📋</span><span class="label">Dashboard</span></a></li>
+            <li class="active"><a href="NBA.html"><span class="icon">🏀</span><span class="label">NBA Stats</span></a></li>
+            <li><a href="radar.html"><span class="icon">🎯</span><span class="label">Radar</span></a></li>
+            <li><a href="over.html"><span class="icon">📍</span><span class="label">Over Analysis</span></a></li>
+        </ul>
+    </nav>
     <header class="header">
         <div class="header-content">
             <div class="brand">
