--- a/visualization.html
+++ b/visualization.html
@@ -850,7 +850,7 @@
             <span>🔍</span> Análise de Jogadores
         </button>
         <button class="main-nav-button" id="reactAnalysisAppButton">
-            <span>🧠</span> Análise (React)
+            <span>🧠</span> Análise (Futebol)
         </button>
         <button class="main-nav-button" id="dashboardButton">
             <span>📋</span> Dashboard
